# xmc7200d

./: .gitignore  Cargo.toml  README.md
cm0/: Cargo.toml  memory.x
cm0/.cargo/: config.toml
cm7/: Cargo.toml  build.rs
cm7/src/: main.rs
xmc7200d-pac/: Cargo.toml  device.x  svd2rust.toml
