[package]
authors = ["{{authors}}"]
edition = "2021"
readme = "README.md"
name = "cm7"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.4"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
vcell = "0.1.3"

xmc7200d-pac ={ path = "../xmc7200d-pac" }

[features]
core0 = []
core1 = []

[[bin]]
name = "cm7"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
